<resources>
    <string name="app_name">HandyConnect</string>
    <string name="language_selection_option">Language selection option</string>
    <string name="english">English</string>
    <string name="get_starde">Get Starde</string>
    <string name="engage_now">Engage Now</string>
    <string name="explore_more">Explore More</string>
    <string name="back">Back</string>
    <string name="how_can_we_help">How can we help?</string>
    <string name="our_services">Our Services</string>
    <string name="painting">Painting</string>
    <string name="door_repair">Door Repair</string>
    <string name="electrical">Electrical</string>
    <string name="air_condition">Air Condition</string>
    <string name="carpentry">Carpentry</string>
    <string name="furniture_assembly">Furniture Assembly</string>
    <string name="cleaning">Cleaning</string>
    <string name="installation_service">Installation Service</string>
    <string name="lock">Locksmith</string>
    <string name="drilling">Drilling</string>
    <string name="plumbing">Plumbing</string>
    <string name="others">Others</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="unit_no">Unit No.</string>
    <string name="postcode">Postcode</string>
    <string name="sign_up_with">Sign Up with</string>
    <string name="thank_you">Thank you</string>
    <string name="account_success">Your account has been successfully created</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="description_of_the_issue">Description of the issue</string>
    <string name="dummy_content">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</string>
    <string name="submit">Submit</string>
    <string name="your_request_has_been_received">Your Request Has been Received</string>
    <string name="thanku_for_request">Hello there! Thank you for the request</string>
    <string name="we_will_be_in_touch_with_you_as_soon_as_we_can">We will be in touch with you as soon as we can</string>
    <string name="already_have_an_account_sign_in">Already have an account? <font color="#B49F64">Sign In</font></string>
    <string name="register_an_account">Register an Account</string>
    <string name="login_account">Login Account</string>
    <string name="complete_from_below_to_continue">Complete from below to continue</string>
    <string name="login">LogIn</string>
    <string name="forget_password">Forget Password?</string>
    <string name="forget_pass">Forget Password</string>
    <string name="forget_content">Enter your registered email below to receive password reset instruction</string>
    <string name="send">Send</string>
    <string name="dummy_content_two">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text.</string>
    <string name="verification">Verification</string>
    <string name="enter_otp_text">Enter OTP sent to your mail abc@gmail.com</string>
    <string name="continue_text">Continue</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="profile">Profile</string>
    <string name="news_feed">News Feed</string>
    <string name="notifications">Notifications</string>
    <string name="referral_reward_system">Referral Reward System</string>
    <string name="online_payment_gateway">Online Payment Gateway</string>
    <string name="live_chat_messenger">Live Chat Messenger</string>
    <string name="transaction">Transaction</string>
    <string name="home">Home</string>
    <string name="about_us">About us</string>
    <string name="appointment">Appointment</string>
    <string name="quotation">Quotation</string>
    <string name="services">Services</string>
    <string name="see_all">See all</string>
    <string name="our_works">Our Works</string>
    <string name="paragraph_one">At Handy Connect, we understand the busy hectic lifestyles that many of us are having and we obviously do not have much time in our hands. Regardless of the size of your home or office, maintaining them can be a struggle. The tasks around your premises usually take up a lot of your time. When work stress builds up, we feel a desperate need to get someone to settle the issues that are popping up.</string>
    <string name="paragraph_two">Our team respects your schedule and arrives with all the tools and equipment necessary to provide an efficient, reliable handyman service. It is our goal to keep your home and office in tip top shape so you can stay on track.</string>
    <string name="paragraph_three">The most common interior repair works that we provide are: plumbing, electrical, locksmith, painting, carpentry, TV bracket installations and drillings etc. Should you need us to assemble pieces of furniture together or drill holes for hanging of paintings etc, we are experienced in providing the services you need. Our highly professional handyman team seeks to deliver genuine workmanship in Singapore.</string>
    <string name="paragraph_four">Handy Connect offers a wide range of hassle-free handyman services. You will be happy to know that we are not only the handyman you need around your premises, we can help enhance the look and feel by offering interior design and renovation services by <font color="#B49F64">Goodman Interior</font> , our other company within the same Goodman’s group.</string>
    <string name="past_appointment">Past Appointment</string>
    <string name="mandy">Mandy</string>
    <string name="view_appointments">View Appointments</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="your_details">Your Details</string>
    <string name="your_services">Your Services</string>
    <string name="service_location_and_billing_location_is_the_same">service location and billing location is the same</string>
    <string name="change_photos">Change Photos</string>
    <string name="your_photos">Your Photos</string>
    <string name="confirm_your_appointment">Confirm your appointment</string>
    <string name="status">Status:</string>
    <string name="accept">Accept</string>
    <string name="rejected">Rejected</string>
    <string name="follow">Follow</string>
    <string name="all_notifications">All Notifications</string>
    <string name="you_recived_a_payment_of_860_00_from_yogie_ismanda">You recived a payment of <font color="#00B2FF">$860.00 </font>from <b>Yogie Ismanda</b></string>
    <string name="you_have_250_point">You have 250 Point</string>
    <string name="refer">Refer</string>
    <string name="points">Points</string>
    <string name="refer_5_people_to_get">Refer 5 people to get</string>
    <string name="_1_100_of_your_money_back_to_your_account">1. 100% of your money back to your account.</string>
    <string name="point_two">2. Clients from our elite community, after 5 more referrals.</string>
    <string name="learnmore_info">Learn more about getting successful using Handy Connect app</string>
    <string name="share_refer_earn_now"><![CDATA[Share, refer & earn now!]]></string>
    <string name="spend">Spend</string>
    <string name="for_handy_connect_members">For Handy Connect Members</string>
    <string name="spending">Spending</string>
    <string name="to_get_a_client_from_the_community">To get a client from the community.</string>
    <string name="payment_gateway">Payment Gateway</string>
    <string name="total_amount_to_be_paid">Total amount to be paid</string>
    <string name="payment_option">Payment Option</string>
    <string name="pay_now">Pay now</string>
    <string name="bank_transfer">Bank Transfer</string>
    <string name="cash_payment">Cash Payment</string>
    <string name="bhim_upi">BHIM UPI</string>
    <string name="enter_your_vpa">ENTER your <font color="#B49F64">VIRTUAL PAYMENT ADDRESS (VPA)</font></string>
    <string name="payment_requested">Payment Requested!</string>
    <string name="paying_to">Paying to</string>
    <string name="national_relief_found">National Relief Found</string>
    <string name="accept_payment">Accept the payment request on your bank app and enter your bank MPIN</string>
    <string name="uploading_of_payment_receipt">Uploading of payment receipt</string>
    <string name="sort_by_date">Sort by <font color="#B49F64">Date</font></string>
    <string name="just_now">Just now</string>
    <string name="all_services">All Services</string>
    <string name="search_for_service_provider">Search for Service Provider</string>
    <string name="cap_painting">PAINTING</string>
    <string name="cap_doorrepair">DOOR REPAIR</string>
    <string name="cap_electrical">ELECTRICAL</string>
    <string name="cap_waterheater">WATER HEATER</string>
    <string name="cap_carpentry">CARPENTRY</string>
    <string name="cap_grabars">GRAB BARS</string>
    <string name="cap_disinfrction_sanitation">DISINFECTION/SANITATION</string>
    <string name="cap_tv_bracket_install">TV BRACKET INSTALLATION</string>
    <string name="cap_locksmith">LOCKSMITH</string>
    <string name="cap_furniture_assembly">FURNITURE ASSEMBLY</string>
    <string name="cap_drilling">DRILLING</string>
    <string name="cap_plumbing">PLUMBING</string>
    <string name="cap_wall_mounting">WALL MOUNTING SERVICES</string>
    <string name="edit">Edit</string>
</resources>