<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_new_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/aboutUs"
        android:icon="@drawable/ic_about_new"
        android:title="@string/about_us" />

    <item
        android:id="@+id/appointment"
        android:icon="@drawable/ic_appoiment_new"
        android:title="@string/appointment" />

    <item
        android:id="@+id/quotation"
        android:icon="@drawable/ic_quation_new"
        android:title="@string/quotation" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile_new"
        android:title="@string/profile" />

</menu>