<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    android:tag="content"
    android:orientation="vertical">

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/_35sdp"
         android:paddingHorizontal="@dimen/_15sdp">

         <ImageView
             android:id="@+id/imgCross"
             android:layout_width="@dimen/_30sdp"
             android:layout_height="@dimen/_30sdp"
             android:src="@drawable/ic_cross"/>

         <TextView
             style="@style/tvSemiBold"
             android:background="@drawable/rectangular_back"
             android:backgroundTint="@color/white"
             android:paddingHorizontal="@dimen/_14sdp"
             android:paddingVertical="@dimen/_4sdp"
             android:text="@string/menu"
             android:visibility="gone"
             android:textAllCaps="true"
             android:textColor="@color/brown"
             android:textSize="@dimen/_11sdp" />

     </LinearLayout>


    <LinearLayout
        android:id="@+id/sec_engageNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/menu_engage"/>

        <TextView
           style="@style/tvRegular"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/engage_now"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sec_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/profileimg"/>

        <TextView
            style="@style/tvRegular"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/profile"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sec_newsFeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/newsfeed"/>

        <TextView
            style="@style/tvRegular"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/news_feed"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sec_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/notification"/>

        <TextView
            style="@style/tvRegular"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/notifications"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/sec_referalSystem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/share"/>

        <TextView
            style="@style/tvRegular"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/referral_reward_system"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sec_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/onlinepayment"/>

        <TextView
            style="@style/tvRegular"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/online_payment_gateway"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sec_liveChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/livechat"/>

        <TextView
            style="@style/tvRegular"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/live_chat_messenger"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sec_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_15sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/transaction"/>

        <TextView
            style="@style/tvRegular"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:text="@string/transaction"/>

    </LinearLayout>

</LinearLayout>