<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_10sdp"
        android:paddingVertical="@dimen/_20sdp">

        <TextView
            android:id="@+id/butBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/round_back"
            android:fontFamily="@font/semibold"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_10sdp"
            android:paddingVertical="@dimen/_3sdp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="@dimen/_8sdp" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:cardCornerRadius="@dimen/_10sdp">
        <ImageView
            android:id="@+id/imgBanner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/loginbanner"/>

    </androidx.cardview.widget.CardView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_14sdp"
            android:orientation="vertical">


            <TextView
                style="@style/tvSemiBold"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/login_account"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <TextView
                style="@style/tvRegular"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/complete_from_below_to_continue"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/et_bakground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/email"/>

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/customEditText"
                    android:inputType="textEmailAddress"
                    android:background="@null"
                    android:text="@string/email"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/et_bakground"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/lock"/>

                <androidx.appcompat.widget.AppCompatEditText
                    style="@style/customEditText"
                    android:inputType="textEmailAddress"
                    android:background="@null"
                    android:text="@string/password"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvForgetPass"
                style="@style/tvSemiBold"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/forget_password"
                android:layout_gravity="right"
                android:textColor="@color/brown"
                android:textSize="@dimen/_15sdp" />

            <TextView
                android:id="@+id/butLogin"
                style="@style/customButton"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:textSize="@dimen/_13sdp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginVertical="@dimen/_25sdp"
                android:background="@drawable/round_back"
                android:text="@string/login"/>


        </LinearLayout>
    </ScrollView>




</LinearLayout>