<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_12sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
           style="@style/tvSemiBold"
            android:textColor="@color/brown"
            android:textSize="@dimen/_14sdp"
            android:text="@string/refer_5_people_to_get"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_12sdp"
            android:backgroundTint="@color/light_brown_two"
            android:background="@drawable/rectangular_back"
            android:paddingVertical="@dimen/_18sdp"
            android:paddingHorizontal="@dimen/_12sdp"
            android:orientation="vertical">

            <TextView
                style="@style/tvSemiBold"
                android:textColor="@color/brown"
                android:textSize="@dimen/_11sdp"
                android:text="@string/_1_100_of_your_money_back_to_your_account"/>

            <TextView
                style="@style/tvSemiBold"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp"
                android:layout_marginVertical="@dimen/_14sdp"
                android:layout_gravity="center_horizontal"
                android:text="OR"/>

            <TextView
                style="@style/tvSemiBold"
                android:textColor="@color/brown"
                android:textSize="@dimen/_11sdp"
                android:text="@string/point_two"/>

        </LinearLayout>


        <TextView
            style="@style/tvBold"
            android:gravity="center"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:textColor="@color/grey"
            android:lineSpacingExtra="@dimen/_3sdp"
            android:layout_gravity="center"
            android:text="@string/learnmore_info"/>


        <TextView
            android:id="@+id/butRegister"
            style="@style/customButton"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:textSize="@dimen/_13sdp"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_11sdp"
            android:drawableStart="@drawable/share"
            android:layout_marginVertical="@dimen/_20sdp"
            android:background="@drawable/round_back"
            android:text="@string/share_refer_earn_now"/>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/dotted_stroke"
             android:paddingVertical="@dimen/_8sdp"
             android:layout_marginBottom="@dimen/_25sdp"
             android:paddingHorizontal="@dimen/_12sdp"
             android:orientation="horizontal">

             <ImageView
                 android:layout_width="@dimen/_18sdp"
                 android:layout_height="@dimen/_18sdp"
                 android:layout_gravity="center"
                 android:src="@drawable/restore_down"/>

             <TextView
                style="@style/tvBold"
                 android:layout_gravity="center"
                 android:text="cha8729"/>

         </LinearLayout>




    </LinearLayout>

</androidx.core.widget.NestedScrollView>