<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_90sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/_12sdp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="@dimen/_5sdp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rectangular_back">

        <LinearLayout
            android:id="@+id/borderSec"
            android:layout_width="@dimen/_10sdp"
            android:layout_height="match_parent"
            android:background="@color/brown"
            android:orientation="vertical" />

        <ImageView
            android:id="@+id/homeIcon"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginVertical="@dimen/_12sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toEndOf="@+id/borderSec"
            android:src="@drawable/homewithcircle" />

        <TextView
            android:id="@+id/serviceName"
            style="@style/tvSemiBold"
            android:layout_height="@dimen/_35sdp"
            android:layout_width="@dimen/_100sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_toEndOf="@+id/homeIcon"
            android:text="@string/painting"
            android:textAllCaps="true"
            android:maxLines="2"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/tvViewAppointment"
            style="@style/tvSemiBold"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="end"
            android:text="@string/view_appointments"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            style="@style/tvSemiBold"
            android:layout_below="@+id/serviceName"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_toEndOf="@+id/homeIcon"
            android:text="@string/mandy"
            android:textColor="@color/bottom_text_color"
            android:textSize="@dimen/_11sdp" />

    </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>